13524
definitions inside annotations are not visible
```scala
class ann(x: Int) extends Annotation

object Bug1 {
  @ann({val x = 1; x}) def u = ()
}
```

gives
```scala
Bug1.scala:4: error: not found: value x
  @ann({val x = 2; x}) def u = ()
                   ^
```
